style: fix page jumping on painting change

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,4 +5,9 @@
 html,
 body {
   font-family: 'Libre Baskerville', serif;
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
 }
